@@ -410,7 +410,13 @@ private:
     size_t m_nCopied;
 };
 
-#if defined(__WINDOWS__) && !defined(__CYGWIN__)
+// Distinguish between the traditional Windows (and MSVC) behaviour and Cygwin
+// (which is always Unix-like) and MinGW which can use either depending on the
+// "ANSI stdio" option value (which is normally set to either 0 or 1, but test
+// for it in a way which works even if it's not defined at all, just in case).
+#if defined(__WINDOWS__) && \
+    !defined(__CYGWIN__) && \
+    (!defined(__MINGW32__) || (__USE_MINGW_ANSI_STDIO +0 == 0))
 
 // on Windows, we should use %s and %c regardless of the build:
 class wxPrintfFormatConverterWchar : public wxFormatConverterBase<wchar_t>
